Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/UB_Event__c.object-meta.xml
<CustomObject>
    <label>UB Event</label>
    <nameField>
        <label>UB Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UB Event</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>