Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Amount_of_Liquor_Given__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Liquor_Given__c</fullName>
    <label>Amount of Liquor Given</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>