Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Brands_Promoted__c.field-meta.xml
<CustomField>
    <fullName>Brands_Promoted__c</fullName>
    <label>Brands Promoted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>