Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Competitors_Brands_Promoted__c.field-meta.xml
<CustomField>
    <fullName>Competitors_Brands_Promoted__c</fullName>
    <label>Competitors Brands Promoted</label>
    <length>35</length>
    <type>Text</type>
</CustomField>