Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>UB Event</relationshipLabel>
    <relationshipName>UB_Event</relationshipName>
    <type>Lookup</type>
</CustomField>