Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Description_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Event__c</fullName>
    <label>Description of Event</label>
    <length>50</length>
    <type>Text</type>
</CustomField>