Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Event_End_Day__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Day__c</fullName>
    <label>Event End Day</label>
    <type>Date</type>
</CustomField>