Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Event_Execution_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Event_Execution_Quarter__c</fullName>
    <label>Event Execution Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>