Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Event_Execution_Stage__c.field-meta.xml
<CustomField>
    <fullName>Event_Execution_Stage__c</fullName>
    <label>Event Execution Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Planning</fullName>
            </value>
            <value>
                <fullName>Under Execution</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>