Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Event_Owner__c.field-meta.xml
<CustomField>
    <fullName>Event_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UB_Event</relationshipName>
    <type>Lookup</type>
</CustomField>