Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Event_Performers__c.field-meta.xml
<CustomField>
    <fullName>Event_Performers__c</fullName>
    <label>Event Performers</label>
    <length>35</length>
    <type>Text</type>
</CustomField>