Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Event_Picture__c.field-meta.xml
<CustomField>
    <fullName>Event_Picture__c</fullName>
    <label>Event Picture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>