Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Expected_Footfall__c.field-meta.xml
<CustomField>
    <fullName>Expected_Footfall__c</fullName>
    <label>Expected Footfall</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>