Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Major_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Major_Competitors__c</fullName>
    <label>Major Competitors</label>
    <length>35</length>
    <type>Text</type>
</CustomField>