Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Outlet__c.field-meta.xml
<CustomField>
    <fullName>Outlet__c</fullName>
    <label>Outlet</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UB Event</relationshipLabel>
    <relationshipName>UB_Event</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>