Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Products_Promoted__c.field-meta.xml
<CustomField>
    <fullName>Products_Promoted__c</fullName>
    <label>Products Promoted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Black Dog</fullName>
            </value>
            <value>
                <fullName>Vladivar</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Royal Challenge</fullName>
            </value>
            <value>
                <fullName>Antiquity</fullName>
            </value>
            <value>
                <fullName>Bagpiper</fullName>
            </value>
            <value>
                <fullName>McDowells</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>