Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Name__c</fullName>
    <label>Sponsor Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>