Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Timings__c.field-meta.xml
<CustomField>
    <fullName>Timings__c</fullName>
    <label>Timings</label>
    <length>35</length>
    <type>Text</type>
</CustomField>