Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/UB_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>UB_Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>UB_AccountPlan__c</referenceTo>
    <relationshipLabel>UB Event</relationshipLabel>
    <relationshipName>UB_Event</relationshipName>
    <type>Lookup</type>
</CustomField>