Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/UB_ActualEventCost__c.field-meta.xml
<CustomField>
    <fullName>UB_ActualEventCost__c</fullName>
    <label>Actual Event Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>