Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/UB_Budget__c.field-meta.xml
<CustomField>
    <fullName>UB_Budget__c</fullName>
    <label>Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>