Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/UB_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UB_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>UB Event</relationshipLabel>
    <relationshipName>UB_Event</relationshipName>
    <type>Lookup</type>
</CustomField>