Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/UB_Event_Occurance_Day__c.field-meta.xml
<CustomField>
    <fullName>UB_Event_Occurance_Day__c</fullName>
    <label>Event Occurance Day</label>
    <type>Date</type>
</CustomField>