Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/UB_Type__c.field-meta.xml
<CustomField>
    <fullName>UB_Type__c</fullName>
    <label>Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>