Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event__c/fields/Volume_of_Liquor_Given__c.field-meta.xml
<CustomField>
    <fullName>Volume_of_Liquor_Given__c</fullName>
    <label>Volume of Liquor Given</label>
    <length>25</length>
    <type>Text</type>
</CustomField>